--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,7 @@
 .footer {
   background: black;
   width: 100vw;
+  max-width:100%;
   height: 8vh;
   display: flex;
   justify-content: center;
