--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   background: black;
   height: 100vh;
+  height: 100dvh;
   width: 100vw;
+  max-width:100%;
   position: relative;
   display: flex;
   justify-content: center;
