--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -7,7 +7,9 @@
   padding: 0;
   border: 0;
   min-height: 100vh;
+  min-height: 100dvh;
   width: 100vw;
+  max-width:100%;
   font-family: "Poppins", sans-serif;
   display: flex;
   flex-direction: column;
