--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
+  min-height: 100dvh;
   width: 100vw;
+  max-width:100%;
 }
 
 code {
